# staticLibTest

./: CMakeLists.txt  READme.md
include/: library.h  testLibrary.h
src/: main.cpp
